# reflcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
include/reflcpp/: core.hpp  runtime.hpp  serialization.hpp  yaml.hpp
